Change main display from grid to flex and fix alignment

--- a/frontend/styles/components/home-elems.css
+++ b/frontend/styles/components/home-elems.css
@@ -3,6 +3,7 @@
     width: 345px;
     flex-direction: column;
     align-items: flex-start;
+    align-self: center;
     gap: 24px;
     margin: 0 15px 24px;
 }
@@ -42,7 +43,7 @@
     flex-direction: column;
     align-items: center;
     gap: 16px;
-    align-self: stretch;
+    align-self: center;
     margin-bottom: 48px;
 }
 
@@ -59,6 +60,7 @@
     width: 345px;
     flex-direction: column;
     align-items: center;
+    align-self: center;
     gap: 16px;
     margin-top: 48px;
     margin-bottom: 24px;
@@ -71,6 +73,7 @@
         width: 690px;
         align-items: center;
         gap: 20px;
+        align-self: center;
     }
 
     .projects-link {
@@ -78,7 +81,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        align-self: stretch;
+        align-self: center;
         margin-bottom: 24px;
     }
 
@@ -87,6 +90,7 @@
         width: 690px;
         height: auto;
         align-items: center;
+        align-self: center;
         gap: 20px;
         flex-shrink: 0;
     }
